force-app/main/default/objects/KpiTracking__c/KpiTracking__c.object-meta.xml
<CustomObject>
    <description>Formato AutoNumber {&quot;KPI-{00000000}&quot;}</description>
    <label>Tracking KPI</label>
    <nameField>
        <displayFormat>KPI-{00000000}</displayFormat>
        <label>Tracking KPI</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tracking KPI</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>