force-app/main/default/objects/KpiTracking__c/fields/AccountRatingCtrl__c.field-meta.xml
<CustomField>
    <fullName>AccountRatingCtrl__c</fullName>
    <description>Campo tecnico nascosto. Necessario per calcolo KPI Bontà Cliente.</description>
    <label>Bontà Cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>