force-app/main/default/objects/KpiTracking__c/fields/ChurnkRiskCtrl__c.field-meta.xml
<CustomField>
    <fullName>ChurnkRiskCtrl__c</fullName>
    <description>Necessario per calcolo KPI Propensione abbandono.  Valorizzato da Mulesoft su input di DWH.</description>
    <label>Churn Risk</label>
    <length>255</length>
    <type>Text</type>
</CustomField>