force-app/main/default/objects/KpiTracking__c/fields/ChurnkRiskCtrlLastUpdate__c.field-meta.xml
<CustomField>
    <fullName>ChurnkRiskCtrlLastUpdate__c</fullName>
    <description>Necessario per calcolo KPI Propensione abbandono.  Valorizzato da Mulesoft su input di DWH.</description>
    <label>Ultimo Aggiornamento Churn Risk</label>
    <type>DateTime</type>
</CustomField>