force-app/main/default/objects/KpiTracking__c/fields/CreditCheckCtrl__c.field-meta.xml
<CustomField>
    <fullName>CreditCheckCtrl__c</fullName>
    <description>Valorizzato da Mulesoft su input di SAP. Indicatore numerico per il calcolo del KPI Credit Check.</description>
    <label>Esito Credit Check</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>