force-app/main/default/objects/KpiTracking__c/fields/LastBillAmount__c.field-meta.xml
<CustomField>
    <fullName>LastBillAmount__c</fullName>
    <description>Campo tecnico nascosto per gestione ultima bolletta.</description>
    <label>Importo Bolletta</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>