force-app/main/default/objects/KpiTracking__c/fields/LastBillCommodity__c.field-meta.xml
<CustomField>
    <fullName>LastBillCommodity__c</fullName>
    <description>Campo tecnico nascosto per gestione ultima bolletta.</description>
    <label>Stato Pagamento Bolletta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>