force-app/main/default/objects/KpiTracking__c/fields/LastBillExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>LastBillExpirationDate__c</fullName>
    <description>Campo tecnico nascosto per gestione ultima bolletta.</description>
    <label>Scadenza Ultima Bolletta</label>
    <type>Date</type>
</CustomField>