force-app/main/default/objects/KpiTracking__c/fields/LastBillLastUpdate__c.field-meta.xml
<CustomField>
    <fullName>LastBillLastUpdate__c</fullName>
    <description>Campo tecnico nascosto per gestione ultima bolletta.</description>
    <label>Ultimo Aggiornamento Ultima Bolletta</label>
    <type>Date</type>
</CustomField>