force-app/main/default/objects/KpiTracking__c/fields/LastBillNumber__c.field-meta.xml
<CustomField>
    <fullName>LastBillNumber__c</fullName>
    <description>Campo tecnico nascosto per gestione ultima bolletta.</description>
    <label>Numero Bolletta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>