force-app/main/default/objects/KpiTracking__c/fields/LastBillPaymentStatus__c.field-meta.xml
<CustomField>
    <fullName>LastBillPaymentStatus__c</fullName>
    <description>Campo tecnico nascosto per gestione ultima bolletta.</description>
    <label>Servizio Bolletta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>