force-app/main/default/objects/KpiTracking__c/recordTypes/HDT_RT_Default.recordType-meta.xml
<RecordType>
    <fullName>HDT_RT_Default</fullName>
    <active>true</active>
    <label>Default</label>
</RecordType>